# guitteum-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/commit/: SKILL.md
docs/: WORK_BACKEND_PLAN.md  WORK_FRONTEND_PLAN.md  WORK_MCP_PLAN.md  WORK_PLAN.md  guitteum_proposal.md
src/guitteum_mcp/: __init__.py  __main__.py  api_client.py  config.py  mapper.py  models.py  pagination.py  server.py
tests/: test_api_client.py  test_mapper.py  test_pagination.py
tests/fixtures/: sample_response.xml
