[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guitteum-mcp"
version = "0.1.0"
description = "대통령 연설문 수집용 MCP 서버 (data.go.kr)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "xmltodict>=0.13.0",
    "pydantic>=2.0.0",
]

[project.scripts]
guitteum-mcp = "guitteum_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/guitteum_mcp"]
